# election

nouvelle version/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  projet-c3.glade.bak  projet-c3.gladep.bak
nouvelle version/autom4te.cache/: output.0  requests  traces.0  traces.1
nouvelle version/po/: Makefile  Makefile.in
nouvelle version/src/: Election.c  Election.h  Election.txt  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h  main.c  nouvelle-version
